Use ImmutableList in the Deobfuscator class